resources/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readarr
  namespace: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      dnsConfig:
        nameservers:
        - 10.43.0.10
      dnsPolicy: None
      containers:
      - name: readarr
        image: ghcr.io/linuxserver/readarr:develop-0.4.2.2653-ls129
        imagePullPolicy: IfNotPresent
        ports:
        - name: readarr
          containerPort: 8787
        volumeMounts:
        - name: readarr
          mountPath: /config
        - name: complete
          mountPath: /mnt/complete
        - name: critical-books
          mountPath: /mnt/critical-books
        - name: books
          mountPath: /mnt/books
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 350Mi
        readinessProbe:
          tcpSocket:
            port: readarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: readarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: readarr
        persistentVolumeClaim:
          claimName: readarr
      - name: readarr-config
        secret:
          secretName: readarr-config
      - name: complete
        nfs:
          path: /volume1/media/complete
          server: 192.168.1.21
      - name: critical-books
        nfs:
          path: /volume1/critical/media/books
          server: 192.168.1.21
      - name: books
        nfs:
          path: /volume1/media/books
          server: 192.168.1.21
