resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: readarr
  labels:
    app: readarr
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: readarr
  selector:
    app: readarr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: readarr
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
